--- a/mole.html
+++ b/mole.html
@@ -5,6 +5,9 @@
         <script type="text/javascript" src="mole.js"></script>
     </head>
     <body>
+        <div class="scoreboard">
+            <div class="scoreboard__score">0</div>
+        </div>
         <div class="pf">
             <div class="wgs">
                 <img
